examples/test/testpolicy1597.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1597
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key6: value0
      key34: value8
      key31: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value35
          key22: value42
      podSelector:
        matchLabels:
          key25: value49
          key2: value33
